--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "magic-string": "^0.19.0",
     "mocha": "^3.2.0",
     "mocha-lcov-reporter": "^1.2.0",
-    "webpack": "^2.3.2"
+    "uglify-js": "^2.8.20"
   },
   "dependencies": {},
   "engines": {
