drop node 7, add node 8-12, report coverage, cache modules

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 sudo: false
+
 language: node_js
+
+cache:
+  directories:
+    - node_modules
+
 node_js:
   - "4"
   - "6"
-  - "7"
+  - "8"
+  - "10"
+  - "12"
 
-script: npm run travis
+script: npm run coverage
 
-# not until I fix the coffee-coverage issue: it doesn't allow excluding files.
-# i'm using a custom version locally which allows that and more.
-# so, i'll publish coverage locally for now.
-# after_success:
-#  - 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
+after_success:
+  - 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
