drop CS stuff, add JS stuff, update deps

--- a/package.json
+++ b/package.json
@@ -27,24 +27,18 @@
   "author": "Eli Doran <eli+npm@elidoran.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "coffeelint -f build/coffeelint.json lib",
-    "prebuild": "npm run lint",
-    "build": "coffee --compile --bare --map --no-header lib",
-    "preumd": "npm run build",
-    "umd": "coffee build/umd.coffee",
+    "lint": "eslint --no-eslintrc --config build/eslint/eslint.js lib/index.js",
+    "test": "mocha --require coffeescript/register --reporter spec --bail --check-leaks test/lib/*.coffee",
+    "test4": "nave use 4 npm test",
+    "test6": "nave use 6 npm test",
+    "test8": "nave use 8 npm test",
+    "test10": "nave use 10 npm test",
+    "test12": "nave use 12 npm test",
+    "tests": "npm run test4 && npm run test6 && npm run test8 && npm run test10 && npm run test12",
+    "coverage": "istanbul cover -x 'build/**' _mocha -- --require coffeescript/register -R spec test/lib/*.coffee",
+    "umd": "node build/umd.js",
     "preumd-min": "npm run umd",
-    "umd-min": "cd lib && uglifyjs umd.js --compress --mangle --source-map umd.min.js.map --in-source-map umd.js.map --output umd.min.js",
-    "clean": "rm lib/*.js lib/*.map",
-    "prepublish": "npm run umd-min",
-    "postpublish": "npm run clean",
-    "pretest": "npm run build",
-    "test": "_mocha --compilers coffee:coffee-script/register --reporter spec --bail --check-leaks test/lib",
-    "precoverage": "npm run build",
-    "coverage": "istanbul cover -x 'build/**' _mocha -- --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul --cc-x=/build -R spec test/lib",
-    "publish-coverage": "npm run coverage && cat coverage/lcov.info | coveralls",
-    "coverage-lcov": "istanbul cover _mocha --report lcovonly -- --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul -R spec test/lib",
-    "coverage-clean": "rm -rf ./coverage",
-    "travis": "npm run clean && npm run coverage-lcov"
+    "umd-min": "cd lib && uglifyjs umd.js --compress --mangle --source-map umd.min.js.map --in-source-map umd.js.map --output umd.min.js"
   },
   "repository": {
     "type": "git",
@@ -52,15 +46,14 @@
   },
   "bugs": "http://github.com/elidoran/eventa/issues",
   "devDependencies": {
-    "coffee-coverage": "^1.0.1",
-    "coffee-script": "^1.12.4",
-    "coffeelint": "^1.16.0",
-    "coveralls": "^2.11.16",
+    "coffeescript": "^2.4.1",
+    "coveralls": "^3.0.3",
+    "eslint": "^5.16.0",
     "istanbul": "^0.4.5",
-    "magic-string": "^0.19.0",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
-    "uglify-js": "^2.8.20"
+    "magic-string": "^0.25.2",
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "uglify-js": "^3.5.9"
   },
   "dependencies": {},
   "engines": {
